<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.wickedsword.retar.comicquiz.SharingActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/comic_quiz"
        android:adjustViewBounds="true"
        style="@style/logo"/>

    <TextView
        android:id="@+id/end_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_message"
        style="@style/ending_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ending_text"
        android:text="@string/share_with_friends"/>

    <Button
        android:id="@+id/submitBtn"
        android:textAppearance="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        style="@style/button"
        android:layout_gravity="center"
        android:onClick="shareAnswers"/>

</LinearLayout>
